# IVSparse

./: Doxyfile  LICENSE  README.md  basic_testing.cpp  ivsparse-benchmark.sh  new_test.cpp  test.cpp
.github/workflows/: static.yml
Benchmarking/: README_TO_REPRODUCE_RESULTS.txt  runBenchmark.sh  ssget
Benchmarking/R/: csf_benchmarking.Rmd  simulated_bench_visualization.Rmd  simulated_visualization.Rmd
Benchmarking/helpful_scripts/: CSC_Folders_to_COO_Folders.py  CSC_to_COO.py  data_converter.py  json_to_csv.py
Benchmarking/lib/: Makefile  datasetSizeBench.cpp  densityBenchmark.cpp  mat-gen-mem-calc.py  runFullSimulatedBench.sh  runSimBench_COO.sh  runSimBench_CSC.sh  simulatedBench.cpp  simulatedBench_COO.cpp  simulatedBench_CSC.cpp  sizeSimulatedBenchmark.cpp  suiteSparseBench.cpp  suiteSparseBenchmarkAnalysis.cpp  suiteSparseBenchmarkFunctions.h
IVSparse/: SparseMatrix
IVSparse/src/: IVSparse_Base_Methods.hpp  IVSparse_SparseMatrixBase.hpp
doc/Examples/: BLASExample.cpp  ConstructorExample.cpp  IteratorExample.cpp
doc/doc_pages/: getting_started.md  license.md  mainpage.md
doc/html/: _c_s_c___b_l_a_s_8hpp.html  _c_s_c___b_l_a_s_8hpp_source.html  _c_s_c___constructors_8hpp.html  _c_s_c___constructors_8hpp_source.html  _c_s_c___iterator_8hpp.html  _c_s_c___iterator_8hpp_source.html  _c_s_c___iterator___methods_8hpp.html  _c_s_c___iterator___methods_8hpp_source.html  _c_s_c___methods_8hpp.html  _c_s_c___methods_8hpp_source.html  (+110 more)
misc/: CMakeLists.txt  countVecMat.cpp  docTest.cpp  matrix_creator.cpp  pbmc3k.cpp
misc/data/: pbmc3k_mat.txt
(+241 files in other folders)
